Quote added for apj, background img white space fixed, apj para-3 img changed

--- a/pages/apj/apjStyles.css
+++ b/pages/apj/apjStyles.css
@@ -1,4 +1,6 @@
-
+body{
+    margin: 0;
+}
 .apj-kinney{
     width: 100%;
     top: 0%;
@@ -16,7 +18,7 @@
 }
 .apj-hero-label{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
@@ -29,12 +31,20 @@
 }
 
 .apj-hero-pic{
-    width: 10%;
+    width: 15%;
     border-radius: 50%;
 }
 .apj-hero-name{
-    font-size: 80px;
+    font-size: 50px;
     font-weight: 30px;
+    padding-left: 5px;
+}
+.apj-quote{
+    font-family: 'Patrick Hand', cursive;
+    color: black;
+    font-size: 35px;
+    font-weight: 300;
+    animation: floatAnimation 5s ease-in-out infinite;
 }
 
 .apj-books{
@@ -52,6 +62,7 @@
 .apj-content {
     background-image: url('../../assets/background.jpg');
     background-size: cover;
+    margin-bottom: -20px;
     background-position: center;
     background-repeat: no-repeat;
     padding: 20px; 
@@ -203,6 +214,11 @@
         align-items: center;
         margin-left: 10px;
         margin-right: 10px;
+    }
+    .apj-quote{
+        font-size: 25px;
+        text-align: center;
+        padding: 5px;
     }
     .apj-hero-name{
         font-size: 25px;
