--- a/pages/jobs/jobsStyles.css
+++ b/pages/jobs/jobsStyles.css
@@ -56,6 +56,7 @@
 .jobs-content {
     background-image: url('../../assets/background.jpg');
     background-size: cover;
+    margin-bottom: -20px;
     background-position: center;
     background-repeat: no-repeat;
     padding: 20px; 
