--- a/pages/nadella/nadellaStyles.css
+++ b/pages/nadella/nadellaStyles.css
@@ -57,6 +57,7 @@
 .nadella-content {
     background-image: url('../../assets/background.jpg');
     background-size: cover;
+    margin-bottom: -20px;
     background-position: center;
     background-repeat: no-repeat;
     padding: 20px; 
@@ -107,6 +108,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 5%;
+    margin-bottom: 1%;
 }
 .nadella-para-3-content{
     width: 60%;
